--- a/pom.xml
+++ b/pom.xml
@@ -69,9 +69,9 @@
 			<version>1.2.17</version>
 		</dependency>
 		<dependency>
-		  <groupId>org.slf4j</groupId>
-		  <artifactId>slf4j-log4j12</artifactId>
-		  <version>1.7.6</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.6</version>
 		</dependency>
 		<dependency>
 			<groupId>c3p0</groupId>
@@ -83,6 +83,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.18</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-streaming_2.10</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
